widget_derive/tests/ui/declare_builder_fail.stderr
error: the identify `margin` is reserved to expand space around widget wrapped.
 --> tests/ui/declare_builder_fail.rs:5:3
  |
5 |   margin: i32,
  |   ^^^^^^
  |
  = help: use `rename` meta to avoid the name conflict in `widget!` macro.

          #[declare(rename = xxx)]
          margin : i32
